<resources>
    <string name="app_name">Local4Fun</string>
    <string name="explore">Explore</string>
    <string name="booking">Booking</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="login_page_email">Email:</string>
    <string name="Login_page_password">Password:</string>
    <string name="login_page_forgotPwd"><u>Forgot password?</u></string>
    <string name="login_page_register_label">Don\'t have an account?</string>
    <string name="login_page_register_text">  <u>Register here</u></string>
    <string name="login_page_signInBtn">SIGN IN</string>
    <string name="title_activity_acount_register">acountRegister</string>
    <string name="register_fullname_label">Fullname:</string>
    <string name="register_email_label">Email:</string>
    <string name="register_pwd_label">Password:</string>
    <string name="register_repeatPwd_label">Confirm Password:</string>
    <string name="register_have_password_label">Already a member?</string>
    <string name="register_login_label">   <u>Login here</u></string>
    <string name="register_btn_name">CTEATE ACCOUNT</string>
    <string name="facebook_app_id">386979122101007</string>
    <string name="fb_login_protocol_scheme">fb386979122101007</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="about_us">About us</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txtPostName">Post Name:</string>
    <string name="editTextPostName">Post Name</string>
    <string name="txtTour">Tour Type:</string>
    <string name="txtDuration">Duration:</string>
    <string name="txtPrice">Price:</string>
    <string name="txtSummary">Summary:</string>
    <string name="editTextSummary">Your summary</string>
    <string name="txtMeetingPoint">Meeting Point:</string>
    <string name="editTextMeetingPoint">Address</string>
    <string name="btnCreatePost">CREATE</string>
    <string name="createYourPost">CREATE YOUR POST</string>
    <string name="minDate">Minimum Date</string>
    <string name="maxDate">Maximum Date</string>

    <string name="search_hint">Search</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_send">Send</string>
    <string name="sample_message">Hello!</string>
    <string name="purchase_success">Payment success!</string>
    <string name="purchase_button">Pay</string>
    <string name="image_description">Shopping items</string>
    <string name="passcode">Passcode</string>
    <string name="purchase_title">Payment</string>

    <string name="txtImages">Images:</string>
    <string name="host_des">Dear Tan</string>
    <string name="host_des_label">Wellcome to Local4fun family. Please answer below question and we will get back to you as soon as possible
    </string>
    <string name="question1">1. Why do you want to become a host? </string>
    <string name="question2">2. Do you have any experience for this position? </string>
    <string name="question3">3. Please choose your language: </string>

    <string-array name="tourTypes">
        <item>City</item>
        <item>Food</item>
        <item>Historic</item>
        <item>Photo</item>
        <item>Sport</item>
    </string-array>

    <string-array name="duration">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>

    <string-array name="price">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="lang">
        <item>English - (EN)</item>
        <item>Francais - (FR)</item>
        <item>VietNam - (VN)</item>
        <item>Spanish - (SP)</item>
    </string-array>

    <!--POST DETAILS-->
    <string name="summary_heading">SUMMARY</string>
    <string name="plan_heading">PLAN</string>
    <string name="information_heading">INFORMATION</string>
    <string name="reviews_heading">REVIEWS</string>
    <string name="back">BACK</string>
    <string name="book_now">BOOK NOW</string>

    <!-- PAY DETAILS -->
    <string name="go_to_payment">GO TO PAYMENT</string>
    <string name="pay_now">PAY NOW</string>
    <string name="your_options">YOUR OPTIONS</string>
    <string name="summary">SUMMARY</string>
    <string name="hintDate">MM/DD/YYYY</string>
    <string name="total_pay">TOTAL</string>
    <string name="check_your_bookings">CHECK YOUR BOOKINGS</string>
    <string name="payment_information">PAYMENT INFORMATION</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>

    <string-array name="time_array">
        <item>0:00</item>
        <item>0:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>

    <string-array name="num_person">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="txtPlan">Plan:</string>
    <string name="editTextPlanLocation1">Location 1</string>
    <string name="editTextPlanLocation1Desc">Location 1 - description</string>
    <string name="editTextPlanLocation2">Location 2</string>
    <string name="editTextPlanLocation2Desc">Location 2 - description</string>
    <string name="editTextPlanLocation3">Location 3</string>
    <string name="editTextPlanLocation3Desc">Location 3 - description</string>
    <string name="editTextPlanLocation4">Location 4</string>
    <string name="editTextPlanLocation4Desc">Location 4 - description</string>
    <string name="editTextPlanLocation5">Location 5</string>
    <string name="editTextPlanLocation5Desc">Location 5 - description</string>

    <string name="txtRegion">Region</string>
    <string name="txtRegionHint">City, Province</string>
    <string name="editTextDescription">Enter short description</string>
    <string name="txtDescription">Description:</string>
    <string name="editTextReview">Write a review...</string>
    <string name="btnPostReview">Post</string>
    <string name="search">Search</string>

</resources>
