<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.CheckBookingScreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_your_bookings"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:orientation="vertical">

        <!-- User' pics and name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_user_icon"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\@String User name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>
        
        <!-- Your options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                style="@style/headingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_options" />
            <!-- Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_calendar"/>
                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintDate"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_time_icon"/>
                    <Spinner
                        android:id="@+id/time_spinner"
                        android:layout_width="120dp"
                        android:layout_height="45dp">
                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_person_price_icon"/>
                    <Spinner
                        android:id="@+id/num_person_spinner"
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_weight="1">
                    </Spinner>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <!--Summary-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                style="@style/headingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/total_pay"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/redDark"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="$0"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/greenLight"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <!-- Controls -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageButton
            android:id="@+id/back_arrow_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_back"
            android:textColor="@android:color/white"
            android:text="@string/back"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/book_now_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:text="@string/go_to_payment"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>